recursion.logo.polygonfractal.PolygonFractal.scala.error
Erreur de compilation :
PolygonFractal:5: error: not found: value lambda
      lambda (levels - 1, -sides, length * shrink, shrink)
      ^